change taxonomies to template-like

--- a/theme/assets/styles/components/_mixins.scss
+++ b/theme/assets/styles/components/_mixins.scss
@@ -23,9 +23,9 @@
   background: white;
   border: 1px solid $gray-lighter;
   border-radius: 16px;
-  padding: 0.5em 1em !important;
+  padding: 0.5em 1em;
   margin-bottom: 10px;
-  display: block;
+  display: inline-block;
 
   transition: box-shadow .3s;
 
@@ -44,18 +44,11 @@
   }
 }
 @mixin tag-link-reverse {
-  /* Rectangle 118: */
+  @include tag-link;
+
   background: $link-color;
   border: 1px solid $gray-lighter;
-  transition: box-shadow .3s;
-    display: inline-block;
-    background: #0ab8d1;
-    border-radius: 11px;
-    padding: .0em .5em !important;;
-    margin-bottom: 0px;
-    display: inline-block;
-    color: #fff;
-    margin-right: .4em;
+  color: white;
 
   &:focus,
   &:active,
@@ -63,12 +56,6 @@
     background: white;
     border-color: $link-color;
     color:$link-color;
-    text-decoration: none;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  &:active {
-    box-shadow: none;
   }
 }
 
@@ -78,4 +65,3 @@
   width: 100%;
   max-width: $max-width;
 }
-
