Deprecate banner option.

--- a/theme/assets/styles/pages/_frontpage.scss
+++ b/theme/assets/styles/pages/_frontpage.scss
@@ -33,6 +33,7 @@
     background-size: cover, cover !important;
     background-position: center center;
     background-repeat: no-repeat;
+    background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/hero_nice_2000.jpg);
   }
 
 }
