--- a/theme/assets/styles/common/_global.scss
+++ b/theme/assets/styles/common/_global.scss
@@ -5,6 +5,13 @@ body {
   padding-top: 70px;
 }
 
+body.sidebar-primary {
+  .main,
+  .sidebar {
+    padding: 50px 0;
+  }
+}
+
 .mg-top0 {
   margin-top: 0;
 }
