--- a/theme/assets/styles/pages/_frontpage.scss
+++ b/theme/assets/styles/pages/_frontpage.scss
@@ -169,3 +169,44 @@ iframe {
     }
   }
 }
+
+.tvdebout-container {
+  text-align: center;
+  > * {
+    text-align: left;
+  }
+  h3 {
+    font-family: Roboto;
+  }
+  > div {
+  display: inline-block;
+  vertical-align: top;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  max-width: 528px;
+  padding: 0 1em;
+  transition : all 0.3s ease;
+  overflow: hidden;
+  }
+  .hide-live {
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  }
+  .live #tvdebout, .replay iframe {
+  width: 100%;
+    .vjs-big-play-button {
+    width: 68px;
+    height: 48px;
+    line-height: 48px;
+    font-size: 3.5em;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border: 0;
+    }
+  }
+}
