--- a/theme/assets/styles/common/_global.scss
+++ b/theme/assets/styles/common/_global.scss
@@ -8,7 +8,8 @@ body {
 body.sidebar-primary {
   .main,
   .sidebar {
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
