--- a/theme/assets/styles/main.scss
+++ b/theme/assets/styles/main.scss
@@ -30,3 +30,6 @@
 @import "pages/_frontpage";
 @import "pages/_frontpage_social";
 @import "pages/_periscope";
+
+// For a strange reason, video-js.css screws the fonts when included via bower:scss
+@import "../../bower_components/video.js/dist/video-js.css";
