--- a/theme/assets/styles/layouts/_pages.scss
+++ b/theme/assets/styles/layouts/_pages.scss
@@ -23,3 +23,18 @@
     @extend .img-responsive;
   }
 }
+
+body {
+  &.page-template-page-villes {
+    #results {
+      .panel {
+        .list-group-item > i:before {
+          vertical-align: middle;
+          font-size: 18px;
+          line-height: 1;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
