Add replays & live on homepage :
- Add TvDebout Livestream again
- Use YouTube channel widget to display TVDebout & StreamDebout.

--- a/theme/assets/styles/main.scss
+++ b/theme/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/widgets";
 @import "components/social_icons";
 @import "components/section";
+@import "components/youtube-channel";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
