--- a/theme/assets/styles/main.scss
+++ b/theme/assets/styles/main.scss
@@ -3,6 +3,7 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "../../bower_components/sass-flex-mixin/_flex.scss";
 // endbower
 @import "../../bower_components/font-awesome/scss/font-awesome.scss";
 
