--- a/theme/assets/styles/components/_agenda.scss
+++ b/theme/assets/styles/components/_agenda.scss
@@ -25,6 +25,9 @@
 }
 
 .agenda {
+  .agenda__title {
+    @include title-font;
+  }
   .agenda__form {
     border-top: 1px solid #f7f7f7;
     border-bottom: 1px solid #f7f7f7;
@@ -48,6 +51,7 @@
       }
       .agenda__event-title {
         @extend .panel-title;
+        font-size: $font-size-base;
         a:last-child {
           color: $link-color;
           &:hover {
