--- a/theme/assets/styles/pages/_frontpage.scss
+++ b/theme/assets/styles/pages/_frontpage.scss
@@ -250,6 +250,29 @@ iframe {
 
 }
 
+.homepage-media {
+  @extend .row;
+  @include flexbox;
+  @include justify-content(space-between);
+  > * {
+    @include flex-grow(1);
+    text-align: center;
+    border: 1px solid #ddd;
+    img {
+      vertical-align: middle;
+      margin: 10px;
+      width: 50px;
+      height: 50px;
+    }
+    span {
+      vertical-align: middle;
+      font-family: AmaticSC;
+      color: #111;
+      font-size: 36px;
+    }
+  }
+}
+
 .video-section {
   padding: 50px 0;
   .live {
