--- a/theme/assets/styles/components/_mixins.scss
+++ b/theme/assets/styles/components/_mixins.scss
@@ -76,3 +76,11 @@
     box-shadow: $top $left $blur $color;
   }
 }
+
+@mixin transform($transforms) {
+     -moz-transform: $transforms;
+       -o-transform: $transforms;
+      -ms-transform: $transforms;
+  -webkit-transform: $transforms;
+          transform: $transforms;
+}
