--- a/theme/assets/styles/components/_agenda.scss
+++ b/theme/assets/styles/components/_agenda.scss
@@ -1,3 +1,17 @@
+.current-actions {
+  margin-left: -15px;
+  margin-right: -15px;
+  text-indent: 2px;
+  background-color: #0ab8d1;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+
+  a {
+    color: #fff;
+  }
+}
+
 .calendar-canvas {
   margin-bottom: 20px;
 }
