--- a/theme/assets/styles/pages/_frontpage.scss
+++ b/theme/assets/styles/pages/_frontpage.scss
@@ -36,6 +36,61 @@
     background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/hero_nice_2000.jpg');
   }
 
+  #live {
+    position: relative;
+    height: 393px;
+    padding: 0;
+
+    .layer {
+      background-color: rgba(0, 0, 0, 0.3);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+
+    .streamer-container {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+
+    .streamer-info {
+      font-size: 20px;
+      color:#fff;
+    }
+
+    .ic-play {
+      display: none;
+      cursor: pointer;
+      font-size: 70px;
+    }
+
+    .replay {
+      display: none;
+      font-weight: normal;
+
+    }
+
+    &.active {
+      .ic-play {
+        display: inline;
+      }
+      .replay {
+        display: block;
+      }
+    }
+
+  }
+
 }
 
 
