--- a/theme/assets/styles/layouts/_header.scss
+++ b/theme/assets/styles/layouts/_header.scss
@@ -39,44 +39,34 @@
     padding: $padding-vertical $navbar-padding-horizontal;
   }
 
-  .navbar-nav-content {
-    clear: both;
+  .navbar-nav-content .navbar-nav {
 
-    border-top: 1px solid #eee;
+    text-align: center;
+    float: none;
 
-    .navbar-nav {
-
-      text-align: center;
+    & > li {
+      display: inline-block;
       float: none;
 
-      & > li {
-        display: inline-block;
-        float: none;
-
-        @media (max-width: $screen-xs-max) {
-          display: block;
-        }
-
-        & > a {
-          border-bottom: 5px solid transparent;
-          padding: 10px 0;
-          margin: 0 30px;
-
-          &:focus {
-            background: none;
-          }
-        }
-
-
-
-
-        &:hover, &.open, &.active {
-          a {
-            border-color: $light-blue;
-          }
-        }
-
+      @media (max-width: $screen-xs-max) {
+        display: block;
+        height: auto;
       }
+
+      & > a {
+        border-bottom: 5px solid transparent;
+        padding-top: 35px;
+        padding-bottom: 10px;
+        margin: 0 30px;
+        font-weight: bold;
+      }
+
+      &:hover, &.open {
+        a {
+          border-color: $light-blue;
+        }
+      }
+
     }
   }
 
