--- a/theme/assets/styles/layouts/_header.scss
+++ b/theme/assets/styles/layouts/_header.scss
@@ -1,128 +1,187 @@
-.navbar-nuitdebout {
-  @extend .navbar-default;
-  background: white;
-  transition: all 0.3s ease;
+.nd-navbar {
+  background-color: white;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
 
   padding: 0 10px;
 
-  &-logo {
-    width: 50px;
+  .nd-navbar__item {
+    display: inline-block;
+    min-width: 150px;
   }
-  &-bloginfo {
-    position: relative;
-    font-family: 'CommuneB1San31';
-    text-transform: uppercase;
-    letter-spacing: 1.1px;
-    line-height: 1 !important;
-    font-size: 32px !important;
-    $navbar-space: (($navbar-height - 32px) / 2);
-    padding: ($navbar-space + 4px) $navbar-padding-horizontal ($navbar-space - 4px) !important;
-    color: #111 !important;
-    &:before {
-      padding-top: 4px;
-      content: '//';
-      position: absolute;
-      left: -10px;
-      top: 50%;
-      transform: translateY(-50%);
-      vertical-align: middle;
+
+  .nd-navbar__toggle {
+    display: none;
+  }
+
+  .nd-navbar__item--logo {
+    padding: 10px;
+    display: inline-flex;
+    align-items: center;
+  }
+
+
+  .nd-navbar__item--navigation {
+    text-align: center;
+    flex: 1;
+  }
+  .social-icon-list {
+    text-align: right;
+  }
+}
+
+.social-icon-list {
+  list-style: none;
+  padding: 0;
+  min-width: 180px;
+
+  & > li {
+    display: inline-block;
+
+  }
+  & > li > a {
+    color: $gray;
+    padding: 10px;
+
+
+    &:hover, &:active, &:focus {
+      color: $gray-dark;
     }
   }
+}
 
-  .navbar-right {
-    margin-right: 0;
+.primary-nav {
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  & > li {
+    display: inline-block;
+
+
+    > a {
+      display: inline-block;
+      border-bottom: 5px solid transparent;
+      padding: 10px 30px;
+
+      font-weight: bold;
+      text-transform: uppercase;
+
+      color: $gray;
+    }
+
+    &:hover, &.open {
+      > a {
+        border-color: $light-blue;
+        color: $gray-dark;
+      }
+    }
+  }
+}
+
+.mobile-navigation-image {
+  display: none;
+}
+
+.menu-button {
+  display: inline-block;
+
+  padding: 10px 30px;
+  font-size: 25px;
+  cursor: pointer;
+
+  border-radius: 5px;
+
+  &:active {
+    background-color: $gray-lighter;
+  }
+}
+
+.navbar-nuitdebout-logo {
+  width: 50px;
+}
+.navbar-nuitdebout-bloginfo {
+  position: relative;
+  display: inline-block;
+  white-space: nowrap;
+
+  font-family: 'CommuneB1San31';
+  text-transform: uppercase;
+  letter-spacing: 1.1px;
+  font-size: 32px;
+  line-height: 1;
+
+  margin-left: 10px;
+  padding: 0;
+
+  color: #111;
+  &:before {
+    content: '//';
+  }
+}
+
+
+@media (max-width: $screen-sm-max) {
+
+  .nd-navbar {
+    align-items: center;
+
+    .nd-navbar__item {
+      min-width: 80px;
+    }
+    .nd-navbar__toggle {
+      display: inline-block;
+    }
+
+    .nd-navbar__item--logo {
+      justify-content: center;
+      flex: 1;
+    }
+
+    .nd-navbar__item--navigation {
+      position: fixed;
+      top: 0;
+      z-index: 100;
+
+      width: 250px;
+      left: -250px;
+
+      transition: transform .3s;
+    }
+
+    .nd-navbar__item--navigation.open {
+      transform: translateX(250px);
+    }
+
+  }
+  .social-icon-list {
+    display: none;
   }
 
-  .social-icons {
-    line-height: 1;
-    $padding-vertical: (($navbar-height - 33px) / 2);
-    padding: $padding-vertical $navbar-padding-horizontal;
-  }
+  .primary-nav {
+    display: block;
+    background-color: white;
 
-  .navbar-nav-content .navbar-nav {
-
-    text-align: center;
-    float: none;
+    height: 100vh;
+    overflow-y: auto;
 
     & > li {
-      display: inline-block;
-      float: none;
+      display: block;
+      width: 100%;
+    }
 
-      @media (max-width: $screen-xs-max) {
-        display: block;
-        height: auto;
-      }
-
-      & > a {
-        border-bottom: 5px solid transparent;
-        padding-top: 35px;
-        padding-bottom: 10px;
-        margin: 0 30px;
-        font-weight: bold;
-      }
-
-      &:hover, &.open {
-        a {
-          border-color: $light-blue;
-        }
-      }
-
+    & > li > a {
+      width: 100%;
+      font-weight: 400;
     }
   }
-
-  // .current-menu-item
-  .navbar-nav > .active > a,
-  .navbar-nav > .active > a:hover,
-  .navbar-nav > .active > a:active {
-    background: none;
-  }
-  .navbar-nav > .active > a:hover {
-    color: #424242
-  }
-}
-
-body.logged-in{
-  .navbar-nuitdebout {
-         &-fixed {
-            position: fixed;
-            left: 0px;
-            top: 30px;
-          }
-
-  }
-
-}
-
-.text-right {
-    text-align: right;
-}
-
-.navbar-brand {
-  padding: (($navbar-height - 50) / 2) $navbar-padding-horizontal;
-}
-
-.menu-top {
-  > li > a {
-    color: #bdbdbd;
-    text-transform: uppercase;
-    background: none;
-  }
-}
-
-.header-placeholder {
-  display: none; // waiting until smaller height nav is implemented
-  height: 115px;
-  width: 100%;
-  &.header-placeholder--with-events {
-    height: 151px;
-  }
-}
-
-@media (max-width: $screen-xs-max) {
-  .header-placeholder {
-    height: 70px;
-    &.header-placeholder--with-events {
-      height: 92px;
-    }
+  .mobile-navigation-image {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 }
