--- a/theme/assets/styles/layouts/_header.scss
+++ b/theme/assets/styles/layouts/_header.scss
@@ -1,3 +1,11 @@
+$header-z-index: 100;
+
+.header {
+  position: relative;
+  z-index: $header-z-index;
+
+}
+
 .nd-navbar {
   background-color: white;
 
@@ -7,6 +15,7 @@
   align-items: flex-end;
 
   padding: 0 10px;
+  position: relative;
 
   .nd-navbar__item {
     display: inline-block;
@@ -59,26 +68,20 @@
   margin: 0;
   padding: 0;
 
-  & > li {
+  .menu-item {
     display: inline-block;
-
 
     > a {
       display: inline-block;
       border-bottom: 5px solid transparent;
       padding: 10px 30px;
 
-      font-weight: bold;
       text-transform: uppercase;
 
       color: $gray;
     }
-
-    &:hover, &.open {
-      > a {
-        border-color: $light-blue;
-        color: $gray-dark;
-      }
+    > a:hover, > a:active, > a:focus {
+      text-decoration: none;
     }
   }
 }
@@ -124,9 +127,24 @@
   }
 }
 
+@media (min-width: $screen-md-min) {
+  .primary-nav {
+    .menu-item {
+      > a {
+        font-weight: bold;
+      }
+
+      &:hover, &.open, &.active {
+        > a {
+          border-color: $light-blue;
+          color: $gray-dark;
+        }
+      }
+    }
+  }
+}
 
 @media (max-width: $screen-sm-max) {
-
   .nd-navbar {
     align-items: center;
 
@@ -145,7 +163,7 @@
     .nd-navbar__item--navigation {
       position: fixed;
       top: 0;
-      z-index: 100;
+      z-index: $header-z-index + 1;
 
       width: 250px;
       left: -250px;
@@ -170,15 +188,19 @@
 
   .primary-nav {
     display: block;
+    text-align: left;
 
-    & > li {
+    .menu-item {
       display: block;
       width: 100%;
+
+      &:hover, &.open, &.active {
+        color: $gray-darker;
+      }
     }
 
-    & > li > a {
+    .menu-item > a {
       width: 100%;
-      font-weight: 400;
     }
   }
   .mobile-navigation-image {
@@ -188,40 +210,72 @@
   }
 }
 
-.navbar-subnav-container {
-  position: relative;
-}
-
-.navbar-open-subnav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100;
-
-  background-color: $footer-bg;
-  color: white;
-
-  padding: 20px;
-
-  display: flex;
-  justify-content: center;
-}
 
 .navbar-subnav-list {
-  margin: auto;
   list-style: none;
 
   .navbar-subnav-list__item {
-    padding: 10px 30px;
     display: inline-block;
 
     & > a {
-      color: white;
+      display: inline-block;
+      padding: 10px 30px;
+      color: $gray-lighter;
+
       &:hover, &:active, &:focus {
-        color: $gray-lighter;
+        color: white;
       }
     }
   }
+}
 
+@media (min-width: $screen-md-min) {
+
+  .navbar-subnav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+
+    background-color: $footer-bg;
+    color: white;
+
+    padding: 20px;
+
+    display: flex;
+    justify-content: center;
+
+    transform: translateY(-200px);
+    transition: transform .3s;
+  }
+
+  .menu-item.open {
+    .navbar-subnav {
+      transform: translateY(0);
+    }
+  }
+}
+
+@media (max-width: $screen-sm-max) {
+  .navbar-subnav-list {
+    display: block;
+
+    .navbar-subnav-list__item {
+      display: block;
+
+      & > a {
+        display: inline-block;
+        padding: 10px 30px;
+        color: $gray;
+
+        &:hover, &:active, &:focus {
+          color: $gray-darker;
+        }
+        .fa {
+          display: none;
+        }
+      }
+    }
+  }
 }
