feat: add see all posts button

--- a/theme/assets/styles/pages/_frontpage.scss
+++ b/theme/assets/styles/pages/_frontpage.scss
@@ -470,4 +470,26 @@ $news-headline-size: 360px !default;
       padding: 10px 0;
       border-top: 1px solid grey;
     }
+
+    .primary-button {
+      margin: 10px  auto;
+      display: block;
+      width: 240px;
+    }
+
+    .post-taxonomies{
+      margin:1em 0;
+      display:block;
+      .post-taxonomy{
+        color: $gray-light;
+        &.post-taxonomy--post_tag{
+            & > a {
+              @include tag-link-reverse();
+              padding: 0 0.5em;
+              border-radius: 11px;
+            }
+        }
+      }
+
+    }
 }
