--- a/theme/assets/styles/common/_variables.scss
+++ b/theme/assets/styles/common/_variables.scss
@@ -30,8 +30,8 @@ $social-github:         #444444;
 
 $gray-darker:  lighten(#000, 13.5%); // #222
 $gray-dark:    lighten(#000, 20%);   // #333
-$gray:         lighten(#000, 33.5%); // #555
-$gray-light:   lighten(#000, 46.7%); // #777
+$gray:         #777777;
+$gray-light:   #EBEBEB;
 $gray-lighter: #F7F7F7;
 
 $navbar-height: 70px;
