--- a/theme/components/Navbar/navbar.scss
+++ b/theme/components/Navbar/navbar.scss
@@ -140,6 +140,7 @@
 
     & > .menu-item > a {
       width: 100%;
+      padding-bottom: 0;
     }
   }
 
@@ -217,20 +218,46 @@
   & > .menu-item {
     display: inline-block;
 
-    & > a {
+    > a {
       display: inline-block;
       padding: 10px 30px;
+
+      &:hover, &:active, &:focus {
+        text-decoration: none;
+      }
+    }
+
+    &.menu-item-has-children > a {
+      cursor: text;
+      text-align: left;
+    }
+  }
+
+  & > .menu-item:not(.menu-item-has-children) > a:before {
+    @extend .fa;
+    @extend .fa-times-circle-o;
+    margin-right: 5px;
+  }
+
+  @media (min-width: $screen-md-min) {
+    & > .menu-item:not(.menu-item-has-children) > a {
       color: $gray-lighter;
 
       &:hover, &:active, &:focus {
         color: white;
       }
+    }
 
-      &:before {
-        @extend .fa;
-        @extend .fa-times-circle-o;
-        margin-right: 5px;
-      }
+    & > .menu-item.menu-item-has-children > a {
+      color: $gray-light;
+      font-weight: 300;
+
+      padding-left: 0;
+    }
+
+    &.navbar-subnav-list--depth-1 > .menu-item {
+      display: block;
+      text-align: left;
     }
   }
 
@@ -241,21 +268,32 @@
       display: block;
 
       & > a {
-        display: inline-block;
-        padding: 10px 30px;
+        padding: 7px 20px;
         color: $gray;
 
         &:hover, &:active, &:focus {
           color: $gray-darker;
         }
-
-        &:before {
-          display: none;
-        }
       }
     }
+
+    & > .menu-item:not(.menu-item-has-children) > a:before {
+      display: none;
+    }
+
+    & > .menu-item.menu-item-has-children > a {
+      color: $gray-dark;
+      font-weight: bold;
+    }
+
+    &.navbar-subnav-list--depth-1 {
+      padding-left: 0;
+      padding-bottom: 10px;
+    }
+
   }
 }
+
 
 @media (min-width: $screen-md-min) {
 
